configurable dir for security keys, volume needs to be set for deployment